[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/EventText.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/battle/RewardWindowPre.tres" type="StyleBox" id=2]
[ext_resource path="res://src/map/RandomOption.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/icons/Gamble.tres" type="Resource" id=4]
[ext_resource path="res://resources/icons/Ignore.tres" type="Resource" id=5]
[ext_resource path="res://fonts/Fat4x5.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/map/RandomWindow.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxEmpty" id=2]

[node name="RandomWindow" type="PanelContainer"]
margin_left = 25.0
margin_top = 26.5
margin_right = 151.0
margin_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 60, 22 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 8 )
title = "Random"
description = "A strange sparkle catches your eye amid a heavy smog. It could be dangerous.."
option_names = [ "Reach for the sparkle", "Ignore it" ]
option_icons = [ [ ExtResource( 4 ) ], [ ExtResource( 5 ) ] ]

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 61.0
custom_constants/separation = 0

[node name="Title" type="Label" parent="Content"]
margin_right = 122.0
margin_bottom = 9.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "Random"
align = 1
valign = 1
uppercase = true

[node name="TextMargin" type="MarginContainer" parent="Content"]
margin_top = 9.0
margin_right = 122.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="Description" type="Label" parent="Content/TextMargin"]
margin_left = 4.0
margin_right = 118.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 31 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "A strange sparkle catches your eye amid a heavy smog. It could be dangerous.."
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Fill" type="ColorRect" parent="Content"]
visible = false
margin_top = 44.0
margin_right = 122.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Divider" type="ColorRect" parent="Content"]
margin_top = 40.0
margin_right = 122.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 1 )
color = Color( 0, 0, 0, 1 )

[node name="Items" type="VBoxContainer" parent="Content"]
margin_top = 41.0
margin_right = 122.0
margin_bottom = 60.0
size_flags_vertical = 8
custom_constants/separation = 1
alignment = 2

[node name="RandomOption_0" parent="Content/Items" instance=ExtResource( 3 )]
description = "Reach for the sparkle"
icons = [ ExtResource( 4 ) ]

[node name="RandomOption_1" parent="Content/Items" instance=ExtResource( 3 )]
margin_top = 10.0
margin_bottom = 19.0
description = "Ignore it"
icons = [ ExtResource( 5 ) ]

[node name="RandomOption_2" parent="Content/Items" instance=ExtResource( 3 )]
visible = false
margin_top = 20.0
margin_bottom = 29.0

[node name="Cover" type="MarginContainer" parent="."]
visible = false
margin_left = 2.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 58, 33 )
custom_constants/margin_top = 9

[node name="White" type="ColorRect" parent="Cover"]
margin_top = 9.0
margin_right = 122.0
margin_bottom = 41.0

[node name="MouseBlock" type="Button" parent="."]
visible = false
margin_left = 2.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 61.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
flat = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Content/Items/RandomOption_0" to="." method="_on_RandomOption_0_pressed"]
[connection signal="pressed" from="Content/Items/RandomOption_1" to="." method="_on_RandomOption_1_pressed"]
[connection signal="pressed" from="Content/Items/RandomOption_2" to="." method="_on_RandomOption_2_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
